oxiplate/tests/broken/extends/unread-field.stderr
error: field `unread_field` is never read
 --> tests/broken/extends/unread-field.rs:7:5
  |
6 | struct Data {
  |        ---- field in this struct
7 |     unread_field: String,
  |     ^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/broken/extends/unread-field.rs:3:8
  |
3 | #[deny(dead_code)]
  |        ^^^^^^^^^
